@@ -42,7 +42,8 @@ public class DictionaryService {
 
   /**
    * Find a word.
-   * @param word word to find.
+   *
+   * @param word          word to find.
    * @param isForWordLink is for word link.
    * @return word and description.
    */
@@ -53,18 +54,30 @@ public class DictionaryService {
         word, false, false, isForWordLink, PageRequest.of(0, 1));
 
     if (CollectionUtils.isEmpty(wordResults)) {
+      String newTypeWord = replaceOldTypeCharactersWithNewTypeCharacters(word);
+      wordResults = viDictionaryRepository.findWord(
+          newTypeWord, false, false, isForWordLink, PageRequest.of(0, 1));
+    }
+
+    if (CollectionUtils.isEmpty(wordResults)) {
+      String oldTypeWord = replaceNewTypeCharactersWithOldTypeCharacters(word);
+      wordResults = viDictionaryRepository.findWord(
+          oldTypeWord, false, false, isForWordLink, PageRequest.of(0, 1));
+    }
+
+    if (CollectionUtils.isEmpty(wordResults)) {
       return null;
     }
 
-    ViDictionaryEntity wordResult = wordResults.get(0);
+    ViDictionaryEntity wordResult = wordResults.getFirst();
 
-    WordDescriptionDTO result = new WordDescriptionDTO(
+    return new WordDescriptionDTO(
         wordResult.getWord(), wordResult.getDescription());
-    return result;
   }
 
   /**
    * Find a random word by start.
+   *
    * @param startWord start word.
    * @return word and description.
    */
@@ -76,6 +89,22 @@ public class DictionaryService {
         startWord, 2, true,
         answeredList == null ? new ArrayList<>() : answeredList,
         PageRequest.of(0, 100));
+
+    if (CollectionUtils.isEmpty(wordList)) {
+      String newTypeStartWord = replaceOldTypeCharactersWithNewTypeCharacters(startWord);
+      wordList = viDictionaryRepository.findTopUsedByStart(
+          newTypeStartWord, 2, true,
+          answeredList == null ? new ArrayList<>() : answeredList,
+          PageRequest.of(0, 100));
+    }
+
+    if (CollectionUtils.isEmpty(wordList)) {
+      String oldTypeStartWord = replaceNewTypeCharactersWithOldTypeCharacters(startWord);
+      wordList = viDictionaryRepository.findTopUsedByStart(
+          oldTypeStartWord, 2, true,
+          answeredList == null ? new ArrayList<>() : answeredList,
+          PageRequest.of(0, 100));
+    }
 
     if (CollectionUtils.isEmpty(wordList)) {
       return null;
@@ -98,5 +127,27 @@ public class DictionaryService {
 
     wordResult.setUsedCount(wordResult.getUsedCount() + 1);
     viDictionaryRepository.save(wordResult);
+  }
+
+  private String replaceOldTypeCharactersWithNewTypeCharacters(String word) {
+    return word.replace("òa", "oà").replace("óa", "oá")
+               .replace("ỏa", "oả").replace("õa", "oã")
+               .replace("ọa", "oạ").replace("òe", "oè")
+               .replace("óe", "oé").replace("ỏe", "oẻ")
+               .replace("õe", "oẽ").replace("ọe", "oẹ")
+               .replace("ùy", "uỳ").replace("úy", "uý")
+               .replace("ủy", "uỷ").replace("ũy", "uỹ")
+               .replace("ụy", "uỵ");
+  }
+
+  private String replaceNewTypeCharactersWithOldTypeCharacters(String word) {
+    return word.replace("oà", "òa").replace("oá", "óa")
+               .replace("oả", "ỏa").replace("oã", "õa")
+               .replace("oạ", "ọa").replace("oè", "òe")
+               .replace("oé", "óe").replace("oẻ", "ỏe")
+               .replace("oẽ", "õe").replace("oẹ", "ọe")
+               .replace("uỳ", "ùy").replace("uý", "úy")
+               .replace("uỷ", "ủy").replace("uỹ", "ũy")
+               .replace("uỵ", "ụy");
   }
 }
